# steppdf

./: .gitignore  CONTEXT.md  Dockerfile  Makefile  README.md  pyproject.toml
.scratch/issues/: 0001-step-pdf-prd.md  0002-bootstrap-single-fastapi-tool-shell.md  0003-submit-accepted-documents-with-limits.md  0004-create-conversion-job-and-estimated-progress.md  0005-convert-and-merge-into-one-merged-pdf.md  0006-fail-whole-job-cleanly.md  0007-persist-jobs-and-clean-up-after-one-hour.md
app/: jobs.py  main.py
app/static/: app.js  styles.css
app/templates/: index.html
docs/adr/: 0001-render-docker-hosting.md  0002-single-fastapi-app.md  0003-async-jobs-with-estimated-progress.md  0004-two-concurrent-conversion-jobs.md  0005-disk-backed-job-metadata.md  0006-libreoffice-best-effort-conversion.md
docs/agents/: domain.md  issue-tracker.md  triage-labels.md
frontend/: package.json  pnpm-lock.yaml  svelte.config.js  tsconfig.json  vite.config.ts
frontend/src/: app.css  app.html
frontend/src/lib/: file-state.selfcheck.ts  file-state.ts
frontend/src/routes/: +page.svelte
tests/: test_app_shell.py  test_jobs.py  test_libreoffice_smoke.py
